Don't allow side scrolling on off-screen stickers. (fixes #60)

--- a/src/css/sticker-hero.css
+++ b/src/css/sticker-hero.css
@@ -9,6 +9,7 @@
 	font-size: 3.5vw;
 	position: relative;
 	z-index: 1000;
+	overflow: hidden;
 }
 
 .sticker-hero h1 {
